@@ -1,3 +1,9 @@
+2002-02-17  Andrew H. Chatham <andrew.chatham@duke.edu>
+	* _oggmodule.c, pyoggsyncstate.c, pyoggstreamstate.c,
+	  pyoggpage.c, pyoggpacket.c, pyoggpackbuff.c:
+	Set the ob_types in the init method instead of statically, as 
+	MSVC complains.
+	
 2002-01-27  Andrew H. Chatham <andrew.chatham@duke.edu>
 	* config_unix.py: Pass dir flags better
 	* pyoggpackbuff.c (py_oggpack_reset), (py_oggpack_writeclear): 
